
  [ Dmitry Shachnev ]
  * New upstream release.
  * Drop all patches that have been included in the new release:
    - CVE-2015-9541.diff
    - CVE-2020-17507.diff
    - CVE-2020-13962.diff
    - enable_a11y_on_linux.diff
    - fix_qlibrary_deadlock.diff
    - moc_handle_includes.diff
    - no_isystem.diff
    - clarify_pic_message.diff

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 08 Sep 2020 15:42:13 +0300

qtbase-opensource-src (5.14.2+dfsg-6) unstable; urgency=medium

  * Backport upstream patch to fix buffer overflow in XBM parser
    (CVE-2020-17507, closes: #968444).
  * Backport upstream patch to handle SSL_shutdown's errors properly
    (CVE-2020-13962).
  * Update symbols files from buildds’ logs.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 19 Aug 2020 20:40:32 +0300

qtbase-opensource-src (5.14.2+dfsg-5) unstable; urgency=medium

  * Backport upstream patch for moc to handle include directives in enums
    (closes: #963955).
  * Stop using -isystem flag in qmake (closes: #958479).
  * Clarify warning message about PIC/PIE, thanks Daniel Kahn Gillmor
    (closes: #879014).
  * Update symbols files for GCC 10.
  * Update libqt5gui5.lintian-overrides for tag renames in Lintian 2.79.

 -- Dmitry Shachnev <mitya57@debian.org>  Sun, 02 Aug 2020 11:49:03 +0300

qtbase-opensource-src (5.14.2+dfsg-4) unstable; urgency=medium

  * Restore debian/patches/armv4.diff, it is still needed for clang
    (see https://bugs.debian.org/963709#20 for details).

 -- Dmitry Shachnev <mitya57@debian.org>  Fri, 26 Jun 2020 19:47:18 +0300

qtbase-opensource-src (5.14.2+dfsg-3) unstable; urgency=medium

  * Build with -no-feature-relocatable, to fix paths on usr-merged systems
    (closes: #961554).
  * Update debian/libqt5core5a.symbols for hurd-i386.
  * Upload to unstable.

 -- Dmitry Shachnev <mitya57@debian.org>  Wed, 24 Jun 2020 11:21:08 +0300

qtbase-opensource-src (5.14.2+dfsg-2) experimental; urgency=medium

  [ Pino Toscano ]