@@ -30,7 +30,7 @@ Last-Update: 2019-03-02
                      "# Block futimens() on Apple platforms unless it's available on ALL",
                      "# deployment targets. This simplifies the logic at the call site",
                      "# dramatically, as it isn't strictly needed compared to futimes().",
-@@ -413,6 +415,7 @@
+@@ -414,6 +416,7 @@
              "label": "getentropy()",
              "type": "compile",
              "test": {
