@@ -11,6 +11,7 @@ qtbase-opensource-src (5.15.1+dfsg-1) UNRELEASED; urgency=medium
     - moc_handle_includes.diff
     - no_isystem.diff
     - clarify_pic_message.diff
+  * Refresh other patches.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 08 Sep 2020 15:42:13 +0300
 
